--- a/skzj/Directory.Build.props
+++ b/skzj/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <AndroidSdkDirectory>C:\Program Files\dotnet\packs\Microsoft.Android.Sdk.Windows\36.1.12\tools</AndroidSdkDirectory>
-    <JavaSdkDirectory></JavaSdkDirectory>
+    <!-- 使用 Visual Studio 安装的 Android SDK -->
+    <AndroidSdkDirectory>D:\Visual Studio\Shared\Android\android-sdk</AndroidSdkDirectory>
   </PropertyGroup>
 </Project>
